# aws-safe-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  feature_request.md  limitation.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  ai-clients.md  architecture.md  authentication.md  backlog.md  changelog-convention.md  claude-code.md  claude-desktop.md  cursor.md  decisions.md  development.md  features.md  goal.md  iam-per-tool.md  lambda-network-access.md  launch.md  limitations.md  naming-conventions.md  prompts.md  quickstart.md  release-checklist.md  release.md  rollback.md  semver-policy.md  standards.md  tools.md  troubleshooting.md  vision.md
docs/contributing/: add-a-tool.md
docs/personas/: README.md  ai-assisted-sre.md  feature-planner.md  local-ai-client-user.md  open-source-contributor.md  pypi-package-user.md  release-engineer.md  security-reviewer.md
docs/security/: redaction-scope.md  threat-model.md
examples/: claude_desktop_config.json  config.yaml
src/aws_safe_mcp/: __init__.py  audit.py  auth.py  config.py  errors.py  main.py  redaction.py  server.py
src/aws_safe_mcp/tools/: apigateway.py  cloudwatch.py  common.py  downstream.py  dynamodb.py  ecs.py  eventbridge.py  graph.py  iam.py  identity.py  kms.py  lambda_tools.py  resource_search.py  s3.py  sns.py  sqs.py  stepfunctions.py
tests/: conftest.py  test_apigateway.py  test_audit.py  test_capability_matrix_freshness.py  test_cloudwatch.py  test_common.py  test_config.py  test_downstream.py  test_dynamodb.py  test_ecs.py  test_error_redaction_properties.py  test_errors.py  test_eventbridge.py  test_guardrails.py  test_iam.py  test_iam_moto.py  test_identity.py  test_invariants.py  test_kms.py  test_lambda_moto.py  test_lambda_network_access_contract.py  test_lambda_tools.py  test_main.py  test_mcp_smoke.py  test_naming_conventions.py  test_policy_summarizers.py  test_redaction.py  test_redaction_properties.py  test_resource_search.py  test_s3.py  test_sns.py  test_sqs.py  test_sqs_helpers.py  test_sqs_moto.py  test_stepfunctions.py  test_tool_contracts.py
